--- a/_posts/2024-01-17-welcome.md
+++ b/_posts/2024-01-17-welcome.md
@@ -4,11 +4,13 @@ title: Welcome
 excerpt_separator:  <!--more-->
 ---
 
-I am looking for a postdoc in applied statistics. My research interests are at the intersection of theoretical statistics, machine learning and single-cell data analysis. 
-
-From November 2019 to January 2024, I was a PhD student at [Laboratoire de Mathématiques Jean Leray](https://www.math.sciences.univ-nantes.fr/fr) ([Ecole Centrale de Nantes](http://www.https://www.ec-nantes.fr/) and [Nantes Université](https://www.univ-nantes.fr/) - Nantes, France). 
+From November 2019 to January 2024, I was a PhD student in applied statistics at [Laboratoire de Mathématiques Jean Leray](https://www.math.sciences.univ-nantes.fr/fr) ([Ecole Centrale de Nantes](http://www.https://www.ec-nantes.fr/) and [Nantes Université](https://www.univ-nantes.fr/) - Nantes, France). 
 I was under the supervision of [Bertrand Michel](http://bertrand.michel.perso.math.cnrs.fr/) and [Franck Picard](https://franckpicard.github.io/). 
 
 
-[contact me](mailto:anthony.ozier-lafontaine@ec-nantes.fr)
+During my PhD, I developed [KTEST](https://github.com/LMJL-Alea/ktest), a framework for kernel-based multivariate comparisons of single-cell data samples. This framework has enabled the identification of cell populations that are typically missed by classical data analyses, such as treatment-resistant cancer cells. This experience, along with my academic background, has provided me with a solid expertise in both machine learning and biology, as I am used to work closely with experts in biology to identify their key research problems and translate them into machine learning tasks.
+
+I am looking for an opportunity to pursue the application of state-of-the-art machine learning techniques to enhance our understanding of complex biological mechanisms. My interest in efficient algorithms and methodological development oriented toward concrete applications is well illustrated by the relevant simulation studies and real-life experiments provided with all my scientific publications in high impact journals such as Genome Biology. 
+
+[contact me](mailto:antho.ozier.laf@gmail.com)
 
